<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DevelopersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/developerTitle"
                android:textColor="#F44336"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="361dp"
                android:layout_margin="7dp"
                app:srcCompat="@drawable/developers" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:text="@string/developersKnowladge"
                android:textColor="#A67A76"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/videoExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/videoExplanation"
                android:textColor="#A67A76"
                android:textSize="17dp" />

            <VideoView
                android:id="@+id/stackoverflowvideo"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>